# pgpart

./: .coveragerc  .travis.yml  MANIFEST.in  README.md  setup.cfg  setup.py
pgpart/: __init__.py  cli.py  listp.py  rangep.py
requirements/: common.txt  test.txt
tests/: test_range.py
