[wheel]
universal = 1

[isort]
line_length=120
wrap_length=80
indent='    '
multi_line_output=5

[pytest]
addopts = --cov=. --cov-report=html --pep8 --isort
norecursedirs = .git requirements env venv
isort_ignore =
    */dist/*.py ALL
    */pgpart.egg-info/*.py ALL
pep8ignore =
    */dist/*.py ALL
    */pgpart.egg-info/*.py ALL
pep8maxlinelength = 120

[metadata]
description-file = README.md
